css/index.css
@import url("fonts.css");

html,
body {
    height: 100vh;
    width: 100vw;
}

.tiles-container {
    position: relative;
    max-width: 1300px;
}

.tile-row {
    width: 75%;
    position: relative;
    margin: 2rem 10px;
    border-radius: 2rem;
}

.row-megathon {
    background-color: rgb(228, 200, 129);
}
.row-fail {
    background-color: rgba(212, 49, 41, 47%);
}
.row-startup {
    color: white;
    background-color: #185a9d;
}

@media (max-width: 992px) {
    .tile-row {
        width: 100%;
        margin-left: 0;
        margin-right: 0;
    }

    .image img {
        margin: 0;
    }

    .stats-display {
        display: none;
    }

    .container-fluid.tiles-container .row {
        margin-top: 2rem !important;
        margin-bottom: 2rem !important;
    }
}

.para {
    max-width: 90vw;
    box-sizing: border-box;
    position: relative;
    border-radius: 10px;
    z-index: 1;
    width: 80%;
}
.image {
    box-sizing: border-box;
    z-index: 2;
    border-radius: 3px;
    width: 20%;
    height: 100%; /* this allows for all fancy alignments of the image */
    position: relative;
}

.stats-display {
    position: absolute;
}

.image-right,
.para-right,
.tile-row-right {
    float: right;
}
.image-left,
.para-left {
    float: left;
}

.para-head {
    font-weight: bold;
    margin-bottom: 1.2rem !important;
    color: #002142;
    font-family: "CustomHeading", sans-serif;
}

.row-startup .para-head {
    color: white;
}

.para-text {
    text-align: justify;
    margin-top: 1.2rem !important;
    margin-bottom: 1.2rem !important;
}

.cta-btn {
    padding: 10px 60px;
    border-radius: 1.5rem;
    margin-top: 1.2rem !important;
    color: white;
}

.cta-btn:hover {
    color: white;
}

.row-fail .cta-btn-container {
    text-align: right;
}

/* at small device, remove image and display text full center */
@media (max-width: 550px) {
    .para {
        width: 100%;
        max-width: 100%;
    }
    .image {
        display: none;
    }
    .para-head {
        text-align: center;
    }
    .cta-btn {
        margin: 1.2rem auto 3rem calc($spacer * 3) !important;
    }
}

/* Specific positioning */
.megathon-image {
    margin-left: 30%;
    margin-top: -30%;
}

.stats-display-megathon {
    right: 0;
    bottom: -15%;
    color: #185a9d;
}

.fail-image {
    margin-left: -30%;
    margin-top: -40%;
}

.stats-display-fail {
    width: fit-content;
    left: 3%;
    bottom: -13%;
    color: #185a9d;
}

.startup-image {
    margin-left: 30%;
    margin-top: -30%;
}

.stats-display-startup {
    width: fit-content;
    right: 3%;
    bottom: -13%;
    color: #185a9d;
}

.row-megathon {
    background-color: rgba(40, 205, 193, 0.47);
}

/* add extra margin due to stats display */
.row-fail {
    margin-top: calc(2rem + 4%);
    margin-bottom: calc(2rem + 4%);
}

/* Testimonial box */

#testimonial-parent {
    /* to give space to the stats text above*/
    margin-top: 8rem;

    /* because the ancestor must be a positioned element for absolute positioning to work */
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
}

.testimonial-container {
    background-color: white;
    border: 1px solid rgb(197, 197, 197);
    border-radius: 2rem;

    max-width: 750px;

    margin: 0 auto;
    padding: 2rem 0;
    position: absolute;
    top: 6rem;
    /* this hack works for horizontal alignment :) */
    /* https://stackoverflow.com/questions/16758102 */
    left: 0;
    right: 0;
}

@media screen and (max-width: 1200px) {
    .testimonial-container {
        position: absolute;
        top: 3rem;
    }
}

@media screen and (max-width: 1000px) {
    .testimonial-container {
        position: absolute;
        top: -3rem;
    }
}

@media screen and (max-width: 992px) {
    .testimonial-container {
        position: relative;
        top: 0;
        left: 0;
    }

    #testimonial-parent {
        margin: 2rem 0;
    }
}

@media screen and (max-width: 768px) {
    .testimonial-container {
        width: 95%;
    }
}

.testimonial-container .profilepic {
    width: 50px;
    height: 50px;
}

.testimonial-container .person-info > div,
.testimonial-container .text {
    margin: 0 auto;
    text-align: center;
    width: fit-content;
}

.testimonial-container .profilepic img {
    width: 100%;
    height: 100%;
}

.carousel-inner {
    height: 100%;
    width: 70%;
    margin: 0 auto;
}

.carousel-item {
    height: 100%;
    background-color: white;
}

.person-info {
    max-width: 40%;
    width: fit-content;
    margin: 0 auto;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    filter: invert(1);
}

.testimonial-container .text {
    font-size: 1.5rem;
}

@media (max-width: 600px) {
    .testimonial-container .text {
        font-size: 1rem;
    }
}

.testimonial-container .person-info .profilepic {
    width: 75px;
    height: 75px;
}

.testimonial-container .person-info .name,
.testimonial-container .person-info .designation {
    font-weight: bold;
    font-size: 1.25rem;
}

.palette-bg-green {
    background-color: #1bbfb3;
}

.palette-bg-green:hover {
    background-color: #4db6ac;
}

.txt-green {
    color: #1bbfb3;
}

.palette-bg-red {
    background-color: #d43129;
}

.palette-bg-red:hover {
    background-color: #dd5e58;
}

.palette-bg-blue {
    background-color: #002240;
}

.palette-bg-blue:hover {
    background-color: #084880;
}

.palette-bg-grey {
    background-color: #ebebeb;
}

